--- a/Server/Dockerfile
+++ b/Server/Dockerfile
@@ -1,16 +1,20 @@
 FROM php:8.2-apache
 
 RUN apt-get update && apt-get install -y \
-    git unzip libpq-dev \
- && docker-php-ext-install pdo pdo_pgsql
+    git unzip zip libzip-dev libpq-dev \
+ && docker-php-ext-configure zip \
+ && docker-php-ext-install pdo pdo_pgsql zip
 
 RUN a2enmod rewrite
 
 WORKDIR /var/www/html
 COPY . .
 
-RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer \
- && composer install --no-dev --optimize-autoloader
+# Instalar Composer
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+
+# Instalar dependencias PHP
+RUN composer install --no-dev --optimize-autoloader --no-interaction
 
 RUN sed -i 's|DocumentRoot /var/www/html|DocumentRoot /var/www/html/public|g' /etc/apache2/sites-available/000-default.conf
 
