--- a/Client/package.json
+++ b/Client/package.json
@@ -1,6 +1,9 @@
 {
   "name": "client",
   "version": "0.0.0",
+"engines": {
+  "node": "18.x"
+},
   "license": "MIT",
   "scripts": {
     "ng": "ng",
